--- a/app/views/equipment_items/index.html.erb
+++ b/app/views/equipment_items/index.html.erb
@@ -1,3 +1,5 @@
+<p id="notice"><%= notice %></p>
 <% @equipment_items.each do |item| %>
-  <h1><%= item.category item.description %></h1>
+  <h1><%= item.category %></h1>
+  <p><%= item.description%></p>
 <% end %>
