--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,4 +1,5 @@
-<h2>Forgot your password?</h2>
+<div class="container p-3 w-50">
+ <h3 style="padding: 12px;">Forgot your password?</h3>
 
 <%= simple_form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
   <%= f.error_notification %>
@@ -11,8 +12,11 @@
   </div>
 
   <div class="form-actions">
-    <%= f.button :submit, "Send me reset password instructions" %>
+    <%= f.button :submit, "Reset password", class: "btn btn-primary" %>
   </div>
 <% end %>
+<br>
 
+<p>Do you already have an account?</p>
 <%= render "devise/shared/links" %>
+</div>
