--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,9 +13,14 @@
   </head>
 
   <body>
-  <%= render "shared/navbar" %>
-    <%= yield %>
-    <p class="notice"><%= notice %></p>
-    <p class="alert"><%= alert %></p>
+    <div class="page-wrapper">
+      <div>
+        <%= render "shared/navbar" %>
+        <%= yield %>
+        <p class="notice"><%= notice %></p>
+        <p class="alert"><%= alert %></p>
+      </div>
+      <%= render "shared/footer" %>
+    </div>
   </body>
 </html>
