--- a/app/views/equipment_items/new.html.erb
+++ b/app/views/equipment_items/new.html.erb
@@ -7,6 +7,7 @@
   <div class="form-inputs">
     <%= f.input :category %>
     <%= f.input :description %>
+    <%= f.input :photo, as: :file %>
   </div>
 
   <div class="form-actions">
