--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -21,7 +21,7 @@
     </div>
 
     <div class="form-actions">
-      <%= f.button :submit, "Sign up", class: "btn btn-primary" %>
+      <%= f.button :submit, "Sign up", class: "btn btn-ghost" %>
     </div>
   <% end %>
   <br><p style="font-size: 18px;">Do you already have an account? <%= render "devise/shared/links" %></p>
