--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -12,7 +12,7 @@
   </div>
 
   <div class="form-actions">
-    <%= f.button :submit, "Reset password", class: "btn btn-primary" %>
+    <%= f.button :submit, "Reset password", class: "btn btn-ghost" %>
   </div>
 <% end %>
 <br>
