--- a/app/views/equipment_items/new.html.erb
+++ b/app/views/equipment_items/new.html.erb
@@ -1,4 +1,5 @@
-<h1>Add a new Equipment Item</h1>
+<div class="container p-3 w-50">
+<h2 style="padding: 12px;">Add a new Equipment Item</h2>
 
 <%= simple_form_for(@equipment_item) do |f| %>
   <%= f.error_notification %>
@@ -11,7 +12,9 @@
   </div>
 
   <div class="form-actions">
-    <%= f.button :submit %>
+    <%= f.button :submit, class: "btn btn-ghost" %>
   </div>
 <% end %>
+<br>
 <%= link_to 'Back to Equipment Items', equipment_items_path %>
+</div>
