Created card components and added cards to equ items index page

--- a/app/views/equipment_items/index.html.erb
+++ b/app/views/equipment_items/index.html.erb
@@ -1,5 +1,19 @@
 <p id="notice"><%= notice %></p>
-<% @equipment_items.each do |item| %>
-  <h1><%= item.category %></h1>
-  <p><%= item.description%></p>
-<% end %>
+
+
+
+<div class="container p-4">
+  <div class="cards">
+    <% @equipment_items.each do |item| %>
+      <div class="card-trip">
+        <img src="<%= cl_image_path item.photo.key, crop: :fit %>" />
+        <div class="card-trip-infos">
+          <div>
+            <h2><%= item.category %></h2>
+            <p>User: <%= item.user.email %></p>
+          </div>
+        </div>
+      </div>
+    <% end %>
+  </div>
+</div>
