Added validation & Dropdown, category Listing pending due to model creation

--- a/app/views/equipment_items/index.html.erb
+++ b/app/views/equipment_items/index.html.erb
@@ -1,8 +1,10 @@
 <p id="notice"><%= notice %></p>
 
 
-
 <div class="container p-4">
+<!--To Do: If user clicked on category on home, only list this category>
+iterate through strings equipment items or create new models for category -->
+
   <div class="cards">
     <% @equipment_items.each do |item| %>
       <div class="card-trip">
