added link to cards form index to the card page

--- a/app/views/equipment_items/index.html.erb
+++ b/app/views/equipment_items/index.html.erb
@@ -6,13 +6,15 @@ iterate through strings equipment items or create new models for category -->
 
   <div class="cards">
     <% @equipment_items.each do |item| %>
-      <div class="card-trip">
-        <img src="<%= cl_image_path item.photo.key, crop: :fit %>" />
-        <div class="card-trip-infos">
-          <h2><%= item.category %></h2>
-          <p>User: <%= item.user.email %></p>
+      <%= link_to item do %>
+        <div class="card-trip">
+          <img src="<%= cl_image_path item.photo.key, crop: :fit %>" />
+          <div class="card-trip-infos">
+            <h2><%= item.category %></h2>
+            <p>User: <%= item.user.email %></p>
+          </div>
         </div>
-      </div>
+      <% end %>
     <% end %>
   </div>
 </div>
