--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -1,3 +1,4 @@
+// CSS of Index cards
 .cards {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
@@ -94,4 +95,26 @@
   .cards {
     grid-template-columns: 1fr 1fr 1fr;
   }
+}
+
+// CSS of Homepage cards
+.card-category {
+  background-size: cover;
+  object-fit: contain;
+  background-position: center;
+  height: 280px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: $background-color;
+  font-size: 28px;
+  font-weight: bold;
+  text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
+  border-radius: 5px;
+  box-shadow: 0 0 15px rgba(0,0,0,0.2);
+  opacity: 0.7;
+}
+
+.card-category:hover {
+  opacity: 1;
 }
