--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,25 +1,17 @@
 <%= render "shared/banner" %>
-
-<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vero aperiam pariatur itaque. Animi praesentium veniam consequuntur cumque, doloribus sed nisi saepe dignissimos perferendis est ut nobis facilis unde, dicta accusamus?</p>
-<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vero aperiam pariatur itaque. Animi praesentium veniam consequuntur cumque, doloribus sed nisi saepe dignissimos perferendis est ut nobis facilis unde, dicta accusamus?</p>
-<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vero aperiam pariatur itaque. Animi praesentium veniam consequuntur cumque, doloribus sed nisi saepe dignissimos perferendis est ut nobis facilis unde, dicta accusamus?</p>
-<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vero aperiam pariatur itaque. Animi praesentium veniam consequuntur cumque, doloribus sed nisi saepe dignissimos perferendis est ut nobis facilis unde, dicta accusamus?</p>
-<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vero aperiam pariatur itaque. Animi praesentium veniam consequuntur cumque, doloribus sed nisi saepe dignissimos perferendis est ut nobis facilis unde, dicta accusamus?</p>
-<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vero aperiam pariatur itaque. Animi praesentium veniam consequuntur cumque, doloribus sed nisi saepe dignissimos perferendis est ut nobis facilis unde, dicta accusamus?</p>
-<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vero aperiam pariatur itaque. Animi praesentium veniam consequuntur cumque, doloribus sed nisi saepe dignissimos perferendis est ut nobis facilis unde, dicta accusamus?</p>
-<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vero aperiam pariatur itaque. Animi praesentium veniam consequuntur cumque, doloribus sed nisi saepe dignissimos perferendis est ut nobis facilis unde, dicta accusamus?</p>
-<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vero aperiam pariatur itaque. Animi praesentium veniam consequuntur cumque, doloribus sed nisi saepe dignissimos perferendis est ut nobis facilis unde, dicta accusamus?</p>
-<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vero aperiam pariatur itaque. Animi praesentium veniam consequuntur cumque, doloribus sed nisi saepe dignissimos perferendis est ut nobis facilis unde, dicta accusamus?</p>
-<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vero aperiam pariatur itaque. Animi praesentium veniam consequuntur cumque, doloribus sed nisi saepe dignissimos perferendis est ut nobis facilis unde, dicta accusamus?</p>
-<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vero aperiam pariatur itaque. Animi praesentium veniam consequuntur cumque, doloribus sed nisi saepe dignissimos perferendis est ut nobis facilis unde, dicta accusamus?</p>
-<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vero aperiam pariatur itaque. Animi praesentium veniam consequuntur cumque, doloribus sed nisi saepe dignissimos perferendis est ut nobis facilis unde, dicta accusamus?</p>
-<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vero aperiam pariatur itaque. Animi praesentium veniam consequuntur cumque, doloribus sed nisi saepe dignissimos perferendis est ut nobis facilis unde, dicta accusamus?</p>
-<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vero aperiam pariatur itaque. Animi praesentium veniam consequuntur cumque, doloribus sed nisi saepe dignissimos perferendis est ut nobis facilis unde, dicta accusamus?</p>
-<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vero aperiam pariatur itaque. Animi praesentium veniam consequuntur cumque, doloribus sed nisi saepe dignissimos perferendis est ut nobis facilis unde, dicta accusamus?</p><p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vero aperiam pariatur itaque. Animi praesentium veniam consequuntur cumque, doloribus sed nisi saepe dignissimos perferendis est ut nobis facilis unde, dicta accusamus?</p>
-<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vero aperiam pariatur itaque. Animi praesentium veniam consequuntur cumque, doloribus sed nisi saepe dignissimos perferendis est ut nobis facilis unde, dicta accusamus?</p>
-<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vero aperiam pariatur itaque. Animi praesentium veniam consequuntur cumque, doloribus sed nisi saepe dignissimos perferendis est ut nobis facilis unde, dicta accusamus?</p>
-<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vero aperiam pariatur itaque. Animi praesentium veniam consequuntur cumque, doloribus sed nisi saepe dignissimos perferendis est ut nobis facilis unde, dicta accusamus?</p>
-<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vero aperiam pariatur itaque. Animi praesentium veniam consequuntur cumque, doloribus sed nisi saepe dignissimos perferendis est ut nobis facilis unde, dicta accusamus?</p>
-<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vero aperiam pariatur itaque. Animi praesentium veniam consequuntur cumque, doloribus sed nisi saepe dignissimos perferendis est ut nobis facilis unde, dicta accusamus?</p>
-<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vero aperiam pariatur itaque. Animi praesentium veniam consequuntur cumque, doloribus sed nisi saepe dignissimos perferendis est ut nobis facilis unde, dicta accusamus?</p>
-<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vero aperiam pariatur itaque. Animi praesentium veniam consequuntur cumque, doloribus sed nisi saepe dignissimos perferendis est ut nobis facilis unde, dicta accusamus?</p>
+<br>
+<div class="container p-2">
+  <h3>Please select your category to see results:</h3>
+  <br>
+  <div class="cards">
+    <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(<%= image_url "skiing-category.jpg" %>)">
+      Skiing
+    </div>
+    <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(<%= image_url "snowboarding-category.jpg" %>)">
+      Snowboarding
+    </div>
+    <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(<%= image_url "accessories.jpg" %>)">
+      Accessories
+    </div>
+  </div>
+</div>
