check add item button in Navbar

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -31,7 +31,9 @@
           <li class="nav-item">
             <%= link_to "Sign Up", new_user_registration_path, class: "nav-link" %>
           </li>
-
+          <li class="nav-item">
+          <%= link_to "Add Item", new_equipment_item_path, class: "nav-link" %>
+          </li>
         <% end %>
       </ul>
     </div>
