--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -104,17 +104,35 @@
   background-position: center;
   height: 280px;
   display: flex;
-  justify-content: center;
+  justify-content: space-around;
   align-items: center;
   color: $background-color;
   font-size: 28px;
   font-weight: bold;
-  text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
-  border-radius: 5px;
+  border-radius: 10px;
   box-shadow: 0 0 15px rgba(0,0,0,0.2);
   opacity: 0.7;
+  position: relative;
 }
 
 .card-category:hover {
   opacity: 1;
+  font-weight: 500;
+  text-shadow: 4px 4px rgba(29, 28, 28, 0.445)e;
+  color: white;
+}
+
+.card-link {
+  width: 100%;
+  text-decoration: none;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  color: $background-color;
+  align-items: center;
+}
+
+.card-link:hover{
+  text-decoration: none;
+  color: $background-color;
 }
