--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,19 +1,30 @@
 <%= render "shared/banner" %>
 
-<%= link_to "Skiing", equipment_items_path(category: "Skiing") %>
-<br>
+
+<br><br><br>
+
 <div class="container p-2">
   <h3>Please select your category to see results:</h3>
   <br>
   <div class="cards">
-    <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(<%= image_url "skiing-category.jpg" %>)">
-      Skiing
-    </div>
-    <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(<%= image_url "snowboarding-category.jpg" %>)">
-      Snowboarding
-    </div>
-    <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(<%= image_url "accessories.jpg" %>)">
-      Accessories
-    </div>
+    <%= link_to equipment_items_path(category: "Skiing"), class: 'card-link' do %>
+      <div class="card-category text-center" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(<%= image_url "skiing-category.jpg" %>)">
+        Skiing
+      </div>
+    <% end %>
+
+    <%= link_to equipment_items_path(category: "Snowboarding"), class: 'card-link' do %>
+      <div class="card-category text-center" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(<%= image_url "snowboarding-category.jpg" %>)">
+        Snowboarding
+      </div>
+    <% end %>
+
+    <%= link_to equipment_items_path(category: "Accessories"), class: 'card-link' do %>
+      <div class="card-category text-center" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(<%= image_url "accessories.jpg" %>)">
+        Accessories
+      </div>
+    <% end %>
   </div>
 </div>
+
+<br><br><br><br><br>
