--- a/app/views/equipment_items/index.html.erb
+++ b/app/views/equipment_items/index.html.erb
@@ -1,12 +1,10 @@
-<p id="notice"><%= notice %></p>
-
 <div class="container p-4">
 <!--To Do: If user clicked on category on home, only list this category>
 iterate through strings equipment items or create new models for category -->
 
   <div class="cards">
     <% @equipment_items.each do |item| %>
-      <%= link_to item do %>
+      <%= link_to item, style: "text-decoration: none;" do %>
         <div class="card-trip">
           <img src="<%= cl_image_path item.photo.key, crop: :fit %>" />
           <div class="card-trip-infos">
