--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -21,8 +21,9 @@
             <%= image_tag "user.png", class: "avatar dropdown-toggle", id: "navbarDropdown", data: { bs_toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
             <div class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
               <%= link_to "My equipment", "#", class: "dropdown-item" %>
-              <%= link_to "My bookings", "#", class: "dropdown-item" %>
-               <%= link_to "Add Item", new_equipment_item_path, class: "nav-link" %>
+              <%= link_to "My bookings", bookings_path, class: "dropdown-item" %>
+              <%= link_to "Add Item", new_equipment_item_path, class: "dropdown-item" %>
+              <%= link_to "See all items", equipment_items_path, class: "dropdown-item" %>
             </div>
           </li>
         <% else %>
