added feature to allow for text breaks when writing equipment description

--- a/app/views/equipment_items/show.html.erb
+++ b/app/views/equipment_items/show.html.erb
@@ -6,7 +6,7 @@
 
   <div>
     <h1>Category: <%= @equipment_item.category %></h1>
-    <p>Description: <%= @equipment_item.description%></p>
+    <p class="text-with-line-breaks">Description: <%= @equipment_item.description%></p>
     <p>User: <%= @equipment_item.user.email %></p>
 
    <%= simple_form_for([@equipment_item, @booking]) do |f| %>
