--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -3,6 +3,7 @@
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   grid-gap: 16px;
+
 }
 
 .card-trip {
@@ -11,6 +12,7 @@
   display: flex;
   flex-direction: column;
   width: 100%;
+  border-radius: 10px;
 }
 
 .card-trip > img {
@@ -98,6 +100,12 @@
 }
 
 // CSS of Homepage cards
+.category-cards {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-gap: 16px;
+}
+
 .card-category {
   background-size: cover;
   object-fit: contain;
@@ -122,7 +130,7 @@
   color: white;
 }
 
-.card-link {
+.card-category-link {
   width: 100%;
   text-decoration: none;
   top: 0;
@@ -132,7 +140,7 @@
   align-items: center;
 }
 
-.card-link:hover{
+.card-category-link:hover{
   text-decoration: none;
   color: $background-color;
 }
