--- a/app/views/equipment_items/show.html.erb
+++ b/app/views/equipment_items/show.html.erb
@@ -10,7 +10,7 @@
     <p>User: <%= @equipment_item.user.email %></p>
 
    <%= simple_form_for([@equipment_item, @booking]) do |f| %>
-      <%# <% f.association :equipment_item %>
+      <%= f.input :booking_date, as: :date, html5: true %>
       <%= f.button :submit, "Rent item", class: "btn btn-ghost" %>
   <% end %>
 
