changed necessary routing for equipment items to have category_id instead of just a category

--- a/app/views/equipment_items/index.html.erb
+++ b/app/views/equipment_items/index.html.erb
@@ -8,7 +8,7 @@ iterate through strings equipment items or create new models for category -->
         <div class="card-trip">
           <img src="<%= cl_image_path item.photo.key, crop: :fit %>" />
           <div class="card-trip-infos">
-            <h2><%= item.category %></h2>
+            <h2>See more info...</h2>
             <p>User: <%= item.user.email %></p>
           </div>
         </div>
