--- a/app/views/equipment_items/new.html.erb
+++ b/app/views/equipment_items/new.html.erb
@@ -6,8 +6,7 @@
     <%= f.error_notification message: f.object.errors[:base].to_sentence if f.object.errors[:base].present? %>
 
     <div class="form-inputs">
-      <%= f.label :category %> <br>
-      <%= f.select :category, ["Select category", "Skiing" ,"Snowboarding","Accessories"] %>
+      <%= f.association :category %>
       <%= f.input :description %>
       <%= f.input :photo, as: :file %>
     </div>
