--- a/app/views/equipment_items/show.html.erb
+++ b/app/views/equipment_items/show.html.erb
@@ -5,7 +5,7 @@
   </div>
 
   <div>
-    <h1>Category: <%= @equipment_item.category %></h1>
+    <h1>Category: <%= @equipment_item.category.name %></h1>
     <p>Description: <%= @equipment_item.description%></p>
     <p>User: <%= @equipment_item.user.email %></p>
 
