--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -18,9 +18,10 @@
                   input_html: { autocomplete: "new-password" } %>
       <%= f.input :first_name, required: true %>
       <%= f.input :last_name, required: true %>
+      <%= f.file_field :avatar, label: "Profile Picture" %>
     </div>
 
-    <div class="form-actions">
+    <div class="form-actions mt-3">
       <%= f.button :submit, "Sign up", class: "btn btn-ghost" %>
     </div>
   <% end %>
