--- a/app/views/equipment_items/new.html.erb
+++ b/app/views/equipment_items/new.html.erb
@@ -7,7 +7,10 @@
 
     <div class="form-inputs">
       <%= f.association :category %>
+      <%= f.input :title %>
       <%= f.input :description %>
+      <%= f.input :price %>
+      <%= f.input :location %>
       <%= f.input :photo, as: :file %>
     </div>
 
