--- a/app/views/equipment_items/show.html.erb
+++ b/app/views/equipment_items/show.html.erb
@@ -5,10 +5,14 @@
   </div>
 
   <div>
-    <h1>Category: <%= @equipment_item.category.name %></h1>
-    <p class="text-with-line-breaks">Description: <%= @equipment_item.description%></p>
+    <h1><%= @equipment_item.title %></h1>
+    <p>Price: <%= number_to_currency(@equipment_item.price) %></p>
+    <p>Location: <%= @equipment_item.location %></p>
     <p>User: <%= @equipment_item.user.email %></p>
-
+    <div class="border-top border-bottom border-3">
+      <p class="text-with-line-breaks mt-3"><%= @equipment_item.description%></p>
+    </div>
+    <br>
    <%= simple_form_for([@equipment_item, @booking]) do |f| %>
       <%= f.input :booking_date, as: :date, html5: true %>
       <%= f.button :submit, "Rent item", class: "btn btn-ghost" %>
