--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -1,7 +1,8 @@
 .banner {
-  background-size: initial;
+  background-size: cover;
   background-position: center;
   padding: 150px 0;
+  height: 500px;
 }
 
 .banner h1 {
