Changed banner size

--- a/app/views/shared/_banner.html.erb
+++ b/app/views/shared/_banner.html.erb
@@ -1,2 +1,2 @@
-<div class="banner" style="background-image: url(<%= image_url "banner9.png" %>);">
+<div class="banner" style="background-image: url(<%= image_url "bannernew4.png" %>);">
 </div>
