--- a/app/views/equipment_items/show.html.erb
+++ b/app/views/equipment_items/show.html.erb
@@ -20,4 +20,10 @@
 
 
   </div>
+
+  <li class="icon-item">
+    <div style="text-decoration: none;"><%= link_to :back do %>
+      <i class="icon-link"><i class="fas fa-arrow-left" ></i></i>
+    <% end %></div>
+  </li>
 </div>
