--- a/app/views/equipment_items/show.html.erb
+++ b/app/views/equipment_items/show.html.erb
@@ -13,11 +13,15 @@
       <p class="text-with-line-breaks mt-3"><%= @equipment_item.description%></p>
     </div>
     <br>
+
+  <% if @equipment_item.user == current_user %>
+  <%= link_to "Delete", equipment_item_path(@equipment_item), class: "btn btn-ghost", method: :delete, data: { confirm: "Are you sure you want to delete this item?"} %>
+  <% else %>
    <%= simple_form_for([@equipment_item, @booking]) do |f| %>
       <%= f.input :booking_date, as: :date, html5: true %>
       <%= f.button :submit, "Rent item", class: "btn btn-ghost" %>
   <% end %>
-
+  <% end %>
 
   </div>
 
