--- a/app/views/dashboard/_my_equipment.html.erb
+++ b/app/views/dashboard/_my_equipment.html.erb
@@ -10,7 +10,7 @@
               <p><%= item.description %></p>
             </div>
             <div>
-             <h3><%= item.price %> € per day</h3>
+             <h3><%= number_to_currency(item.price) %> per day</h3>
             </div>
           </div>
         </div>
