--- a/app/views/bookings/show.html.erb
+++ b/app/views/bookings/show.html.erb
@@ -18,8 +18,8 @@
       <% end %>
     </div>
 
-    <p class="mt-1">Location: <%= @booking.equipment_item.location %></p>
-    <p class="mt-3">Booking date: <%= @booking.booking_date.strftime('%d-%m-%Y')  %></p>
+    <p class="mt-1"><i class="fas fa-map-pin"></i> <%= @booking.equipment_item.location %></p>
+    <p class="mt-3"><i class="fas fa-calendar-alt"></i> <%= @booking.booking_date.strftime('%d-%m-%Y')  %></p>
     <p class="mt-3"><%= number_to_currency(@booking.equipment_item.price) %> per day</p>
 
     <div class="border-top border-bottom border-3">
