--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
-  <h1>My Dashboard</h1>
-   <ul class="nav nav-pills mb-3" id="pills-tab" role="tablist">
+  <h1 style="text-align: center;">My Dashboard</h1>
+   <ul class="nav nav-pills mb-3" style="display: flex; justify-content: center;" id="pills-tab" role="tablist">
     <li class="nav-item" role="presentation">
       <button class="nav-link active" id="pills-home-tab" data-bs-toggle="pill" data-bs-target="#pills-home" type="button" role="tab" aria-controls="pills-home" aria-selected="true">Bookings</button>
     </li>
