--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -5,6 +5,6 @@
     <a href="https://de.linkedin.com/" target=”_blank”><i class="fab fa-linkedin"></i></a>
   </div>
   <div class="footer-copyright">
-    This footer is made with <i class="fas fa-heart"></i>
+    Created with <i class="fas fa-heart"></i> by Melissa, Anna, Nicola & Michelle
   </div>
 </div>
