--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -62,22 +62,32 @@
   padding: 20x;
 }
 
+// Smallest device
 @media (min-width: 100px) and (max-width: 575px) {
+  body {
+    overflow-x: hidden !important;
+  }
+  .container {
+    max-width: 100% !important;
+    overflow-x: hidden !important;
+  }
+  .cards {
+    grid-template-columns: 1fr;
+  }
   .item-container {
     flex-direction: column;
   }
 }
 
-
-// Smallest device
-@media (min-width: 100px) and (max-width: 575px) {
-  .cards {
-    grid-template-columns: 1fr;
-  }
-}
-
 // Small devices (landscape phones, 576px and up)
 @media (min-width: 576px) {
+  body {
+    overflow-x: hidden !important;
+  }
+  .container {
+    max-width: 100% !important;
+    overflow-x: hidden !important;
+  }
   .cards {
     grid-template-columns: 1fr;
   }
@@ -85,6 +95,13 @@
 
 // Medium devices (tablets, 768px and up)
 @media (min-width: 768px) {
+  body {
+    overflow-x: hidden !important;
+  }
+  .container {
+    max-width: 100% !important;
+    overflow-x: hidden !important;
+  }
   .cards {
     grid-template-columns: 1fr 1fr;
   }
@@ -92,6 +109,13 @@
 
 // Large devices (desktops, 992px and up)
 @media (min-width: 992px) {
+  body {
+    overflow-x: hidden !important;
+  }
+  .container {
+    max-width: 100% !important;
+    overflow-x: hidden !important;
+  }
   .cards {
     grid-template-columns: 1fr 1fr 1fr;
   }
@@ -99,6 +123,13 @@
 
 // Extra large devices (large desktops, 1200px and up)
 @media (min-width: 1200px) {
+  body {
+    overflow-x: hidden !important;
+  }
+  .container {
+    max-width: 100% !important;
+    overflow-x: hidden !important;
+  }
   .cards {
     grid-template-columns: 1fr 1fr 1fr;
   }
