--- a/app/views/shared/_banner.html.erb
+++ b/app/views/shared/_banner.html.erb
@@ -1,2 +1,1 @@
-<div class="banner" style="background-image: url(<%= image_url "banner9.png" %>);">
-</div>
+<div class="banner" style="background-image: url(<%= image_url "banner9.png" %>);"></div>
