--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,10 +1,17 @@
 // Specific CSS for your home-page
 
-
+.container{
+  border-color: $light-green !important;
+}
 .arrow{
     position: relative;
     left: 100%;
     transform: translate(-50%,-50%);
+}
+.title{
+  text-align: center;
+  margin-bottom: 15px;
+  margin-top: 15px;
 }
 .arrow span{
     display: block;
@@ -35,9 +42,6 @@
         transform: rotate(45deg) translate(20px,20px);
     }
 }
-
-
-
 .form-select {
   width: 200px;
 }
